--- a/src/css/base.css
+++ b/src/css/base.css
@@ -3,7 +3,7 @@
 /*内容、版心 提取 */
 body { font: 12px/150% "Hiragino Sans GB", "Microsoft Yahei", arial, 宋体, "Helvetica Neue", Helvetica, STHeiTi, sans-serif; color: #777; background: #fff; }
 
-.container { width: 1200px; margin: 0 auto; }
+.container { width: 1200px; margin: 0 auto; padding: 0; }
 
 .fl { float: left; }
 
