--- a/src/sass/top.scss
+++ b/src/sass/top.scss
@@ -3,6 +3,9 @@
 @import 'common';
 $pub_nav_h:30px;
 
+*{
+    box-sizing: content-box;
+}
 .more::after{
     content: "";
     display: block;
@@ -220,7 +223,6 @@ $pub_nav_h:30px;
             @extend %ad-left;
         }
         .pub-search-warp{
-            height: 60px;
             width: 510px;
             padding-top: 23px;
             box-sizing: border-box;
@@ -393,8 +395,8 @@ $pub_nav_h:30px;
                 width: 212px;
                 background: $highcolor;
                 color: #fff;
-                height: 37px;
-                line-height: 37px;
+                height: 38px;
+                line-height: 38px;
                 font-size: 14px;
                 position: relative;
                 padding-left: 36px;
@@ -456,7 +458,7 @@ $pub_nav_h:30px;
                     float: left;
                     a{
                         display: inline-block;
-                        padding: 8px 18px;
+                        padding: 10px 18px;
                         font-size: 16px;
                         &:hover{
                             color: $highcolor;
@@ -468,7 +470,7 @@ $pub_nav_h:30px;
                 display: none;
                 position: absolute;
                 left: 0;
-                top: 37px;
+                top: 38px;
                 z-index: 999;
                 overflow: hidden;
                 width: 988px;
