--- a/src/sass/goodlist.scss
+++ b/src/sass/goodlist.scss
@@ -25,7 +25,7 @@
         // background: #f5c;
         min-height: 206px;
         padding-left: 10px;
-        //lgz :promise 问题
+        //lgz :promise 
         ul{
             display: none;
             
@@ -89,34 +89,42 @@
         margin-bottom:10px;
         padding-right: 6px;
         dl{
+            position: relative;
             margin-right: 73px;
             dt,dd{
                 float: left;
-                padding: 9px;
-                line-height: 20px;
+                position: relative;                
                 border-right: 1px solid #ccc;
             }
             dd{
+                a{
+                    padding: 11px;
                 i{
+                    position: relative;
+                    right: -3px;
                     display:inline-block;
                     width: 7px;
                     height: 10px;
                     background: url(../img/common/2014shop_background_img.png) no-repeat 0 -11px;
                 }
-                &.active{
-                    background: #fff;
-                    &.desc{
-                        i{
-                            background-position: -7px -11px;
-                        }
-                    }
-
-                    &.asc{
-                        i{
-                            background-position: -14px -11px;
-                        }
+                
+                &.asc{
+                    i{
+                        background-position: -14px -11px;
                     }
                 }
+                &.active{
+                        padding-bottom: 12px;
+                        padding-top: 10px;
+                        background: #fff;
+                        color: $highcolor;
+                        &.desc{
+                            i{
+                                background-position: -7px -11px;
+                            }
+                        }
+                    }
+                }                    
             }
         }
         p{
