--- a/src/css/gooddetails.css
+++ b/src/css/gooddetails.css
@@ -15,9 +15,11 @@
 
 .gooddetails-main .details-top .image-wrap { width: 402px; height: 526px; border: 1px solid #ccc; }
 
-.gooddetails-main .details-top .image-wrap .big-image { width: 403px; height: 403px; box-sizing: border-box; border: 1px solid #ccc; margin-bottom: 20px; }
+.gooddetails-main .details-top .image-wrap .big-image { width: 403px; height: 403px; box-sizing: border-box; border: 1px solid #ccc; position: relative; margin-bottom: 20px; }
 
-.gooddetails-main .details-top .image-wrap .big-image span img { display: block; width: 401px; }
+.gooddetails-main .details-top .image-wrap .big-image .zoomimg { position: relative; width: 100%; height: 100%; }
+
+.gooddetails-main .details-top .image-wrap .big-image .zoomimg img { display: block; width: 100%; height: 100%; }
 
 .gooddetails-main .details-top .image-wrap .img-list { height: 57px; margin-bottom: 10px; margin-top: 5px; margin-left: 20px; width: 360px; overflow: hidden; }
 
@@ -29,7 +31,9 @@
 
 .gooddetails-main .details-top .image-wrap .img-list .items ul { position: absolute; width: 999999px; height: 56px; }
 
-.gooddetails-main .details-top .image-wrap .img-list .items ul li { float: left; width: 65px; text-align: center; }
+.gooddetails-main .details-top .image-wrap .img-list .items ul li { float: left; width: 65px; text-align: center; box-sizing: border-box; }
+
+.gooddetails-main .details-top .image-wrap .img-list .items ul li.active img { border: 1px solid #FFA500; }
 
 .gooddetails-main .details-top .image-wrap .img-list .items ul li img { border: 1px solid #CCC; padding: 2px; width: 50px; height: 50px; }
 
