--- a/src/sass/gooddetails.scss
+++ b/src/sass/gooddetails.scss
@@ -17,11 +17,16 @@
                 height: 403px;
                 box-sizing: border-box;
                 border:1px solid #ccc;
+                position: relative;
                 margin-bottom: 20px;
-                span{
+                .zoomimg{
+                    position: relative;
+                    width: 100%; 
+                    height: 100%;
                     img{
                         display: block;
-                        width: 401px; 
+                        width: 100%; 
+                        height: 100%;
                     }
                 }
             }
@@ -62,6 +67,12 @@
                             float: left;
                             width: 65px;
                             text-align: center;
+                            box-sizing: border-box;
+                            &.active{
+                                img{
+                                    border: 1px solid $highcolor;
+                                }
+                            }
                             img{
                                 border: 1px solid #CCC;
                                 padding: 2px;
